--- a/STM32_PowerStation.ioc
+++ b/STM32_PowerStation.ioc
@@ -21,11 +21,12 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB6
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB6
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PA4
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
@@ -33,8 +34,8 @@ Mcu.Pin5=PA7
 Mcu.Pin6=PB0
 Mcu.Pin7=PB10
 Mcu.Pin8=PB11
-Mcu.Pin9=PA9
-Mcu.PinsNb=15
+Mcu.Pin9=PB15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -78,6 +79,8 @@ PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PB15.Locked=true
+PB15.Signal=GPIO_Input
 PB6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB6.GPIO_Label=KEY
 PB6.GPIO_PuPd=GPIO_PULLUP
